# Infinite-Landscapes

./: .gitignore  CMakeLists.txt  README.md  infinite_landscapes.pyke
.claude/: settings.local.json
app/: CMakeLists.txt
app/src/: main.cpp
app/src/engine/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  shader.cpp  shader.hpp  vk_base.hpp  window.cpp  window.hpp
app/src/shaders/: compute.slang  generation.slang  mesh.slang  minimal.slang  noise.slang
libs/ImGui/: CMakeLists.txt
libs/Slang/: CMakeLists.txt
